# clinical-note-deid-open

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  package.json  pyproject.toml
docs/: PROBLEM.md
site/: index.html
src/: cli.js  index.js
src/clinical_note_deid_open/: __init__.py
tests/: test_smoke.py
